# wanzhou

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  analyze_raw.py  enrich.py  fly.toml  harvest_isbns.py  import_isbns.py  make_admin.py  migrate_tags.py  parse_dump.py  parse_dumps.py  probe.py  pyproject.toml  recompute_cjk.py  update_authors.py
cnbib/: __init__.py  aggregator.py  api.py  cleaning.py  db.py  isbn.py  notify.py  schema.py  store.py
cnbib/sources/: __init__.py  base.py  google_books.py  openlibrary.py
cnbib/static/: about.html  add.html  admin.html  author.html  book.html  chrome.js  contact.html  edit.html  guide.html  index.html  login.html  me.html  privacy.html  search.html  tag.html  work.html
docs/: backlog.md  design.md
tests/: test_aggregator.py  test_api.py  test_auth.py  test_cleaning.py  test_contribute.py  test_db.py  test_isbn.py  test_moderation.py  test_store.py
